# Academic-AI-backend

./: .gitignore  Readme.md  db.sqlite3  manage.py  pyproject.toml  qnetwork.pth  requirements.txt
AcademicAIbackend/: asgi.py  settings.py  urls.py  wsgi.py
api/: Readme.md  documentation.md  hello.l2
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_topic_focus_area_alter_topic_max_time_and_more.py  0002_batch_exams.py  0002_exam_assignement_2_date_exam_assignment_1_date_and_more.py  0002_exam_semester.py
student/: managers.py  models.py  serializers.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_alter_user_admission_year_alter_user_credits_and_more.py  0002_remove_user_email.py  0002_rename_max_time_task_max_study_time_and_more.py  0002_task_skip_count_task_skiped_assesments.py  0003_user_is_staff_alter_user_is_superuser.py
student/scheduler/: schedule.py
